feat: 新增我的最愛功能 (240116)
